--- a/phone-system/index.html
+++ b/phone-system/index.html
@@ -26,10 +26,26 @@
 </div>
 </body>
 	<script>
+        responsiveVoice.speak("Press 1 for fast food options. Press 2 for medical offices. Press 3 for car rentals. Press 4 for grocery stores. Press 9 to repeat the options. Press 0 to speak with an operator  ");
 		$("#phoneNumbers>button").on('click',handleNumberPress);
 		function handleNumberPress(){
 			var buttonPressed = $(this).text();
-			responsiveVoice.speak("you pressed "+buttonPressed);
+			console.log(buttonPressed);
+			if(buttonPressed === "1") {
+                responsiveVoice.speak("you pressed 1 for fast food options");
+            }else if(buttonPressed === "2"){
+                responsiveVoice.speak("you pressed 2 for medical offices");
+			}else if(buttonPressed === "3"){
+                responsiveVoice.speak("you pressed 3 for car rentals");
+            }else if(buttonPressed === "4"){
+                responsiveVoice.speak("you pressed 4 for grocery stores");
+            }else if(buttonPressed === "9"){
+                responsiveVoice.speak("Press 1 for fast food options. Press 2 for medical offices. Press 3 for car rentals. Press 4 for grocery stores. Press 9 to repeat the options. Press 0 to speak with an operator  ");
+            }else if(buttonPressed === "0"){
+                responsiveVoice.speak("Please hold, for the operator");
+			}else{
+                responsiveVoice.speak("you pressed " + buttonPressed);
+			}
 		}
 	</script>
 </html>
